--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="row">
         <nav
           id="sidebarMenu"
-          class="col-md-3 col-lg-2 d-md-block bg-body-tertiary sidebar collapse"
+          class="col-sm-12 col-md-3 col-lg-2 d-md-block bg-body-tertiary sidebar collapse"
         >
           <div class="position-sticky pt-3 sidebar-sticky">
             <h6
@@ -228,8 +228,8 @@
           </div>
         </nav>
 
-        <main class="col-md-9 w-50 px-5 mx-5 my-4 col-lg-10 px-md-4">
-          <div class="container px-5">
+        <main class="col-md-9 ms-sm-auto col-lg-10 ">
+          <div class="container ">
             <div
               class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3"
             >
